# SLAE-2025-4sem

1-tridiagonal-matrix/: CMakeLists.txt  main.cpp
1-tridiagonal-matrix/src/: CMakeLists.txt  tridiagonal_solver.cpp  tridiagonal_solver.h
1-tridiagonal-matrix/tests/: CMakeLists.txt  test.cpp
2-CSR-Dense-Comparison/: CMakeLists.txt  CSRMatrix.cpp  CSRMatrix.h  DenseMatrix.cpp  DenseMatrix.h  benchmark.cpp  benchmark.h  benchmark_results.csv  main.cpp  plot_benchmark.py
